Fixed the table spacing, now it all looks good

--- a/projects/expenseTracker/expenses/main.css
+++ b/projects/expenseTracker/expenses/main.css
@@ -192,7 +192,7 @@ form {
   */
 
 .table {
-  display: flex;
+  display: table;
   flex-direction: column;
   width: 100%;
 }
@@ -206,17 +206,18 @@ table {
 th,
 td {
   border-bottom: 1px solid gray;
-  padding: 10px 0px;
+  padding: 10px 5px;
+
+  text-align: center;
+  word-break: break-all;
 }
 
 .thAndRowName {
-  text-align: left;
   width: 10% !important;
   word-break: break-all;
 }
 
 .thRest {
-  text-align: right;
   width: 5%;
   word-break: break-all;
 }
